force-app/main/default/objects/CampaignMember/fields/Access_Code__c.field-meta.xml
<CustomField>
    <fullName>Access_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Access Code</label>
    <referenceTo>Subscription__c</referenceTo>
    <relationshipLabel>Campaign Members</relationshipLabel>
    <relationshipName>Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>