force-app/main/default/objects/CampaignMember/fields/Answer_1__c.field-meta.xml
<CustomField>
    <fullName>Answer_1__c</fullName>
    <label>Answer 1</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>