force-app/main/default/objects/CampaignMember/fields/Answer_3__c.field-meta.xml
<CustomField>
    <fullName>Answer_3__c</fullName>
    <label>Answer 3</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>