force-app/main/default/objects/CampaignMember/fields/Answer_4__c.field-meta.xml
<CustomField>
    <fullName>Answer_4__c</fullName>
    <label>Answer 4</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>