force-app/main/default/objects/CampaignMember/fields/Attended__c.field-meta.xml
<CustomField>
    <fullName>Attended__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Did they attend webinar or not?</description>
    <label>Attended</label>
    <type>Checkbox</type>
</CustomField>