force-app/main/default/objects/CampaignMember/fields/bizible2__Bizible_Touchpoint_Date__c.field-meta.xml
<CustomField>
    <fullName>bizible2__Bizible_Touchpoint_Date__c</fullName>
    <description>Custom date used to set the Touchpoint Date for Bizible Attribution. If blank, Campaign Member Created Date or First Responded Date will be used depending on the logic selected.</description>
    <inlineHelpText>Custom date used to set the Touchpoint Date for Bizible Attribution. If blank, Campaign Member Created Date or First Responded Date will be used depending on the logic selected.</inlineHelpText>
    <label>Bizible Touchpoint Date</label>
    <type>DateTime</type>
</CustomField>