force-app/main/default/objects/CampaignMember/fields/Date_of_Training__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Training__c</fullName>
    <defaultValue>today()</defaultValue>
    <label>Date of Training</label>
    <type>Date</type>
</CustomField>