force-app/main/default/objects/CampaignMember/fields/Duration_of_Stay__c.field-meta.xml
<CustomField>
    <fullName>Duration_of_Stay__c</fullName>
    <description>Duration of attendance on webinar</description>
    <label>Duration of Stay</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>