force-app/main/default/objects/CampaignMember/fields/Global_MQL__c.field-meta.xml
<CustomField>
    <fullName>Global_MQL__c</fullName>
    <formula>Lead.Global_MQL__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Global MQL</label>
    <type>Checkbox</type>
</CustomField>