force-app/main/default/objects/CampaignMember/fields/Global_MQL_Assignment_Date__c.field-meta.xml
<CustomField>
    <fullName>Global_MQL_Assignment_Date__c</fullName>
    <formula>Lead.Global_MQL_Assignment_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Global MQL Assignment Date</label>
    <type>Date</type>
</CustomField>