force-app/main/default/objects/CampaignMember/fields/How_are_you_currently_transferring_Data__c.field-meta.xml
<CustomField>
    <fullName>How_are_you_currently_transferring_Data__c</fullName>
    <inlineHelpText>How are you currently transferring data between ReadyTalk and Technology Partner today?</inlineHelpText>
    <label>How are you currently transferring Data</label>
    <type>TextArea</type>
</CustomField>