force-app/main/default/objects/CampaignMember/fields/How_useful_was_today_s_webinar__c.field-meta.xml
<CustomField>
    <fullName>How_useful_was_today_s_webinar__c</fullName>
    <inlineHelpText>Select 1-5</inlineHelpText>
    <label>How useful was today&apos;s webinar?</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>