force-app/main/default/objects/CampaignMember/fields/Initial_meeting_time__c.field-meta.xml
<CustomField>
    <fullName>Initial_meeting_time__c</fullName>
    <label>Initial meeting time</label>
    <type>Date</type>
</CustomField>