force-app/main/default/objects/CampaignMember/fields/Interested_in_adding_another_provider__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_adding_another_provider__c</fullName>
    <inlineHelpText>Are you interested in adding an (other) audio and web conferencing service to your business?</inlineHelpText>
    <label>Interested in adding another provider</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Maybe at a future time</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>