force-app/main/default/objects/CampaignMember/fields/Interested_in_Services__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_Services__c</fullName>
    <label>Interested in ReadyTalk Services?</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>30 Day Free Trial</fullName>
            </value>
            <value>
                <fullName>Audio Conferencing</fullName>
            </value>
            <value>
                <fullName>Demo</fullName>
            </value>
            <value>
                <fullName>Recording and Podcasting</fullName>
            </value>
            <value>
                <fullName>Social Media integration into web events</fullName>
            </value>
            <value>
                <fullName>Web Conferencing</fullName>
            </value>
            <value>
                <fullName>Web Event Best Practices</fullName>
            </value>
            <value>
                <fullName>Web Event Packages</fullName>
            </value>
            <value>
                <fullName>Webinar Consultation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>