force-app/main/default/objects/CampaignMember/fields/Last_Playback_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Playback_Date__c</fullName>
    <description>Last recording playback date for webinar campaign members.</description>
    <label>Last Playback Date</label>
    <type>Date</type>
</CustomField>