force-app/main/default/objects/CampaignMember/fields/leadScoring__Campaign_Score__c.field-meta.xml
<CustomField>
    <fullName>leadScoring__Campaign_Score__c</fullName>
    <description>This field stores the Campaign Score contribution for this campaign member record.  If deleted, this value is used to decrement lead score.  If the campaign member is edited, this value will change if rule criteria are now met, or no longer met.</description>
    <label>Campaign Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>