force-app/main/default/objects/CampaignMember/fields/Longest_Playback_Date__c.field-meta.xml
<CustomField>
    <fullName>Longest_Playback_Date__c</fullName>
    <description>Longest recording playback date for webinar campaign members.</description>
    <label>Longest Playback Date</label>
    <type>Date</type>
</CustomField>