force-app/main/default/objects/CampaignMember/fields/Modality_Campaign_Member_ID__c.field-meta.xml
<CustomField>
    <fullName>Modality_Campaign_Member_ID__c</fullName>
    <externalId>true</externalId>
    <label>Modality Campaign Member ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>