force-app/main/default/objects/CampaignMember/fields/MV_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>MV_Created_Date__c</fullName>
    <description>Marketing View: Created Date</description>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MV: Created Date</label>
    <type>Date</type>
</CustomField>