force-app/main/default/objects/CampaignMember/fields/Qualifier__c.field-meta.xml
<CustomField>
    <fullName>Qualifier__c</fullName>
    <description>A field used to determine who is responsible for the outbound call to qualify lead</description>
    <inlineHelpText>The Inside Sales Rep that is responsible for the outbound call to qualify the lead</inlineHelpText>
    <label>Qualifier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Danny Ramos</fullName>
            </value>
            <value>
                <fullName>Grace Corbett</fullName>
            </value>
            <value>
                <fullName>Jessica Fertik</fullName>
            </value>
            <value>
                <fullName>Mark Brooks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>