force-app/main/default/objects/CampaignMember/fields/Reason_s_for_not_integrating_with_RT__c.field-meta.xml
<CustomField>
    <fullName>Reason_s_for_not_integrating_with_RT__c</fullName>
    <label>Reason(s) for not integrating with RT</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not enough resources</fullName>
            </value>
            <value>
                <fullName>Connectors are not available with my sub</fullName>
            </value>
            <value>
                <fullName>Lack of Features</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>