force-app/main/default/objects/CampaignMember/fields/TalkPoint_Campaign_Member_Id__c.field-meta.xml
<CustomField>
    <fullName>TalkPoint_Campaign_Member_Id__c</fullName>
    <externalId>true</externalId>
    <label>TalkPoint Campaign Member Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>