force-app/main/default/objects/CampaignMember/fields/Total_Number_of_Clicks_Leads__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Clicks_Leads__c</fullName>
    <formula>Lead.Number_of_Clicks__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Number of Clicks (Leads)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>