force-app/main/default/objects/CampaignMember/recordTypes/iMC_Campaign_Member.recordType-meta.xml
<RecordType>
    <fullName>iMC_Campaign_Member</fullName>
    <active>false</active>
    <description>iMeet Central Campaign Member Records</description>
    <label>iMC Campaign Member</label>
</RecordType>