force-app/main/default/objects/CampaignMember/recordTypes/PGi_Campaign_Member.recordType-meta.xml
<RecordType>
    <fullName>PGi_Campaign_Member</fullName>
    <active>true</active>
    <label>PGi Campaign Member</label>
</RecordType>