force-app/main/default/objects/CampaignMember/recordTypes/ReadyTalk_Campaign.recordType-meta.xml
<RecordType>
    <fullName>ReadyTalk_Campaign</fullName>
    <active>false</active>
    <label>ReadyTalk Campaign</label>
</RecordType>