force-app/main/default/objects/CampaignMember/recordTypes/TalkPoint_Campaign_Member.recordType-meta.xml
<RecordType>
    <fullName>TalkPoint_Campaign_Member</fullName>
    <active>false</active>
    <label>TalkPoint Campaign Member</label>
</RecordType>